--- a/package.json
+++ b/package.json
@@ -16,11 +16,16 @@
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
+        "sass": "^1.32.5",
+        "sass-loader": "^10.1.1",
         "vue-loader": "^15.9.5",
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "bootstrap": "^4.6.0",
+        "bootstrap-vue": "^2.21.2",
         "laravel-mix-brotli": "^1.0.0",
+        "node-sass": "^5.0.0",
         "vue": "^2.6.12",
         "vue-router": "^3.4.9",
         "vuex": "^3.6.0"
