--- a/package.json
+++ b/package.json
@@ -10,24 +10,29 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@mdi/js": "^5.9.55",
         "axios": "^0.21",
         "babel-plugin-dynamic-import-webpack": "^1.1.0",
         "babel-plugin-syntax-dynamic-import": "^6.18.0",
+        "browser-sync": "^2.26.14",
+        "browser-sync-webpack-plugin": "^2.2.2",
+        "deepmerge": "^4.2.2",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "sass": "^1.32.5",
+        "sass": "^1.32.7",
         "sass-loader": "^10.1.1",
         "vue-loader": "^15.9.5",
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
-        "bootstrap": "^4.6.0",
-        "bootstrap-vue": "^2.21.2",
+        "@mdi/font": "^5.9.55",
+        "handy-uploader": "^1.1.5",
         "laravel-mix-brotli": "^1.0.0",
         "node-sass": "^5.0.0",
         "vue": "^2.6.12",
         "vue-router": "^3.4.9",
+        "vuetify": "^2.4.4",
         "vuex": "^3.6.0"
     }
 }
