--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "node-sass": "^5.0.0",
         "vue": "^2.6.12",
         "vue-router": "^3.4.9",
+        "vuedraggable": "^2.24.3",
         "vuetify": "^2.4.4",
         "vuex": "^3.6.0"
     }
