--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "postcss": "^8.1.14",
         "sass": "^1.32.7",
         "sass-loader": "^10.1.1",
+        "vue-codemirror": "^4.0.6",
         "vue-loader": "^15.9.5",
         "vue-template-compiler": "^2.6.12"
     },
